Fix dark mode display bugs (except EditReview)

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,7 +1,4 @@
-// @import "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css";
-// @import "bootstrap/dist/css/bootstrap.min.css";
-// @import "react-bootstrap-typeahead/css/Typeahead.css";
-// @import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css";
+@import "../node_modules/bootstrap/scss/bootstrap";
 
 body {
   margin: 0;
@@ -15,4 +12,51 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.bg-light {
+  .form-control {
+    background-color: $gray-100;
+  }
+}
+
+.bg-dark {
+  .dropdown-menu {
+    background-color: $dark;
+    border: 1px solid $secondary;
+    box-shadow: $box-shadow-sm;
+
+    .dropdown-item {
+      color: $light;
+
+      &:hover {
+        background-color: $gray-800 !important;
+      }
+    }
+  }
+
+  .form-control, .form-select {
+    background-color: $dark;
+    color: $light;
+    border: 1px solid $secondary;
+  }
+
+  .rbt {
+    .rbt-input-main {
+      color: $light;
+    }
+
+    .rbt-token {
+      background-color: rgba($primary, 0.1);
+    }
+  }
+}
+
+.markdown-container {
+  img {
+    display: block;
+    max-width: 80vw;
+    box-shadow: $box-shadow-sm;
+    border-radius: $border-radius;
+  }
 }
